--- a/twitter/package.json
+++ b/twitter/package.json
@@ -2,7 +2,7 @@
   "name": "bliss-qotd",
   "version": "1.0.0",
   "description": "Twitter bot tweeting positive quotes daily",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "tsc && node dist/index.js",
     "test": "npm test"
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/twitter": "^1.7.0",
     "tslint": "^5.12.1",
     "typescript": "^4.1.2"
   }
