--- a/twitter/package.json
+++ b/twitter/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/beavelar/BlissQOTD#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "twitter": "^1.7.1"
   },
