--- a/twitter/package.json
+++ b/twitter/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/twitter": "^1.7.0",
-    "tslint": "^5.12.1",
+    "eslint": "^7.16.0",
     "typescript": "^4.1.2"
   }
 }
