--- a/web-scraper/package.json
+++ b/web-scraper/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bliss-qotd-twitter",
+  "name": "bliss-qotd-web",
   "version": "1.0.0",
-  "description": "Twitter bot tweeting positive quotes daily",
+  "description": "Web scraper providing Twitter bot quotes daily",
   "main": "src/index.ts",
   "scripts": {
     "start": "tsc && node dist/index.js",
@@ -24,12 +24,10 @@
   "homepage": "https://github.com/beavelar/BlissQOTD#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "twitter": "^1.7.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@types/twitter": "^1.7.0",
     "eslint": "^7.16.0",
     "typescript": "^4.1.2"
   }
