--- a/twitter/.env.template
+++ b/twitter/.env.template
@@ -2,6 +2,9 @@ MAX_TWEET_SEARCH=21
 MAX_TWEET_ATTEMPTS=10
 TWITTER_HANDLE=
 
+WEB_SCRAPER_HOSTNAME=localhost
+WEB_SCRAPER_PORT=3005
+
 CONSUMER_KEY=
 CONSUMER_SECRET=
 ACCESS_TOKEN_KEY=
