--- a/twitter/package.json
+++ b/twitter/package.json
@@ -23,12 +23,11 @@
   },
   "homepage": "https://github.com/beavelar/BlissQOTD#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
     "@types/twitter": "^1.7.0",
     "eslint": "^7.16.0",
     "typescript": "^4.1.2"
