--- a/web-scraper/.env.template
+++ b/web-scraper/.env.template
@@ -1,1 +1,3 @@
 WEB_SCRAPER_PORT=
+GOOD_READS_INSPIRATION_LINK=https://www.goodreads.com/quotes/tag/inspiration
+GOOD_READS_INSPIRATIONAL_LINK=https://www.goodreads.com/quotes/tag/inspirational
