Sends web scraper request with character limit parameter

--- a/twitter/.env.template
+++ b/twitter/.env.template
@@ -1,6 +1,7 @@
 MAX_TWEET_SEARCH=21
 MAX_TWEET_ATTEMPTS=10
 TWITTER_HANDLE=
+TWEET_CHARACTER_LIMIT=250
 
 WEB_SCRAPER_HOSTNAME=localhost
 WEB_SCRAPER_PORT=3005
