--- a/twitter/.env.template
+++ b/twitter/.env.template
@@ -3,8 +3,8 @@ MAX_TWEET_ATTEMPTS=10
 TWITTER_HANDLE=
 TWEET_CHARACTER_LIMIT=270
 
-WEB_SCRAPER_HOSTNAME=localhost
-WEB_SCRAPER_PORT=3005
+WEB_SCRAPER_HOSTNAME=
+WEB_SCRAPER_PORT=
 
 CONSUMER_KEY=
 CONSUMER_SECRET=
