--- a/web-scraper/.env.template
+++ b/web-scraper/.env.template
@@ -1,3 +1,5 @@
+WEB_SCRAPER_PORT=
 MAX_REQUEST_ATTEMPTS=10
+
 GOOD_READS_INSPIRATION_LINK=https://www.goodreads.com/quotes/tag/inspiration
 GOOD_READS_INSPIRATIONAL_LINK=https://www.goodreads.com/quotes/tag/inspirational
