--- a/web-scraper/tsconfig.json
+++ b/web-scraper/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "scr/*": [
+        "./src/*"
+      ]
+    },
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
