--- a/twitter/tsconfig.json
+++ b/twitter/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "scr/*": [
+      "src/*": [
         "./src/*"
       ]
     },
